# figregistry

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  environment-dev.yml  environment.yml  initialgoals.md  pyproject.toml  requirements.txt  setup_env.sh  setup_utils.sh
figregistry-kedro/: pyproject.toml
figregistry-kedro/.github/workflows/: examples.yml  performance.yml  post-release-validation.yml  release.yml  security.yml  test.yml
figregistry-kedro/docs/: README.md  configuration.md  installation.md
figregistry-kedro/docs/api/: config.md  datasets.md  hooks.md  index.md
figregistry-kedro/examples/advanced/: .kedro.yml  README.md  pyproject.toml
figregistry-kedro/examples/advanced/conf/base/: catalog.yml  figregistry.yml  logging.yml  parameters.yml
figregistry-kedro/examples/advanced/conf/local/: catalog.yml  figregistry.yml  logging.yml  parameters.yml
figregistry-kedro/examples/advanced/conf/production/: catalog.yml  figregistry.yml  logging.yml  parameters.yml
figregistry-kedro/examples/advanced/conf/staging/: catalog.yml  figregistry.yml  logging.yml  parameters.yml
figregistry-kedro/examples/advanced/data/01_raw/: advanced_quality_control.csv  cross_validation_results.csv  enterprise_experiment_metadata.csv  multi_algorithm_performance.csv  publication_quality_measurements.csv  time_series_training_metrics.csv
figregistry-kedro/examples/advanced/data/02_intermediate/: advanced_feature_engineering_results.csv  advanced_quality_control_metrics.csv  complex_experimental_design_matrix.csv  multi_environment_experimental_analysis.csv  temporal_cohort_analysis.csv
figregistry-kedro/examples/advanced/data/03_primary/: advanced_model_performance_summary.csv  cross_study_comparative_analysis.csv  enterprise_visualization_contexts.csv  multi_environment_analysis_summary.csv  publication_ready_statistical_analysis.csv
figregistry-kedro/examples/advanced/data/08_reporting/: environment_performance_summary.csv  experiment_results_matrix.csv  model_comparison_summary.csv  publication_figures_metadata.json
figregistry-kedro/examples/advanced/src/figregistry_kedro_advanced_example/: __init__.py  nodes.py  pipeline_registry.py  settings.py  utils.py
figregistry-kedro/examples/basic/: .kedro.yml  README.md  pyproject.toml
figregistry-kedro/examples/basic/conf/base/: catalog.yml  figregistry.yml  logging.yml  parameters.yml
figregistry-kedro/examples/basic/data/01_raw/: experiments_metadata.csv  quality_control_data.csv  sample_measurements.csv  time_series_measurements.csv
figregistry-kedro/examples/basic/data/02_intermediate/: aggregated_time_series.csv  experimental_analysis_combined.csv  quality_analysis_results.csv  statistical_summaries.csv
figregistry-kedro/examples/basic/data/03_primary/: condition_comparison_summary.csv  model_training_results.csv  publication_figures_data.csv
figregistry-kedro/examples/basic/src/figregistry_kedro_basic_example/: __init__.py  nodes.py  pipeline_registry.py  settings.py
figregistry-kedro/examples/migration/: README.md  conversion_guide.md  migration_script.py
figregistry-kedro/examples/migration/after/: .kedro.yml  README.md  pyproject.toml
figregistry-kedro/examples/migration/after/conf/base/: catalog.yml  figregistry.yml  logging.yml  parameters.yml
figregistry-kedro/examples/migration/after/data/01_raw/: experiment_metadata.csv  experimental_data.csv  quality_metrics.csv  sample_results.csv
figregistry-kedro/examples/migration/after/data/02_intermediate/: processed_experimental_results.csv  quality_control_analysis.csv  statistical_analysis_summary.csv  temporal_analysis_aggregated.csv
figregistry-kedro/examples/migration/after/data/03_primary/: condition_comparison_matrix.csv  final_experimental_analysis.csv  quality_metrics_analyzed.csv  temporal_analysis_final.csv
figregistry-kedro/examples/migration/after/data/08_reporting/: README.md  figure_generation_log.json
figregistry-kedro/examples/migration/before/: .kedro.yml  README.md  pyproject.toml
figregistry-kedro/src/figregistry_kedro/: __init__.py  config.py  datasets.py  hooks.py
figregistry-kedro/tests/: conftest.py  test_config.py  test_datasets.py  test_hooks.py  test_init.py  test_integration.py
figregistry-kedro/tests/data/: baseline_figregistry.yml  catalog_templates.yml  config_test_data.py  performance_test_data.py
figregistry-kedro/tests/data/catalogs/: advanced_catalog.yml  basic_catalog.yml  invalid_catalog.yml  multi_environment_catalog.yml  parameter_extraction_catalog.yml  performance_catalog.yml  versioned_catalog.yml
figregistry-kedro/tests/data/configs/: complex_conditions.yml  empty_config.yml  environment_local.yml  environment_production.yml  invalid_schema.yml  kedro_base_config.yml  malformed_yaml.yml  merge_conflict_base.yml  merge_conflict_override.yml  performance_test.yml  valid_basic.yml
figregistry-kedro/tests/data/outputs/: catalog_integration_results.yml  config_merge_baseline.yml  cross_platform_validation.json  dataset_save_metadata.json  error_scenarios_expected.json  hook_initialization_log.json  performance_benchmarks.json  security_validation_report.json
figregistry-kedro/tests/data/sample_data/: PERFORMANCE_DATA_GENERATION_GUIDE.md  basic_pipeline_data.csv  concurrent_execution_data.csv  error_scenario_data.csv  experimental_metadata.json  experimental_results.csv  migration_test_data.csv  multi_condition_experiments.csv  performance_benchmark_data.csv  performance_benchmark_data_complete.csv  performance_benchmark_data_expanded.csv  time_series_data.csv  versioning_test_data.csv
figregistry-kedro/tests/data/security/: catalog_parameter_injection.yml  corrupted_structure.yml  environment_variable_exploit.yml  hook_exploitation_config.yml  import_injection_config.yml  invalid_parameter_combinations.yml  path_traversal_exploit.yml  yaml_injection_attack.yml
figregistry-kedro/tests/fixtures/: config_fixtures.py  dataset_fixtures.py  hook_fixtures.py  kedro_fixtures.py  matplotlib_fixtures.py  project_fixtures.py
src/figregistry/: __init__.py
(+35 files in other folders)
