[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "figregistry"
version = "0.3.0"
description = "Configuration-driven figure generation and management for scientific visualization with optional Kedro plugin integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Samuel Brudner", email = "samuel.brudner@yale.edu"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pydantic>=2.0.0",
    "matplotlib>=3.0.0",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/figregistry/figregistry"
Documentation = "https://figregistry.readthedocs.io"
Repository = "https://github.com/figregistry/figregistry"
"Bug Tracker" = "https://github.com/figregistry/figregistry/issues"
"Kedro Plugin" = "https://github.com/figregistry/figregistry-kedro"
"Kedro Plugin Documentation" = "https://figregistry-kedro.readthedocs.io"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "ipython>=8.0.0",
]

kedro = [
    "kedro>=0.18.0,<0.20.0",
]

docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["figregistry*"]
namespaces = true

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=figregistry --cov-report=term-missing"

[metadata]
license_file = "LICENSE"